--- a/index.html
+++ b/index.html
@@ -1,1 +1,84 @@
-Test commit
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"
+    />
+    <link rel="stylesheet" href="style/style.css" />
+    <title>First Aid Courses</title>
+  </head>
+  <body>
+    <section id="header">
+      <div class="header-top">
+        <div class="container d-flex justify-content-between">
+          <a href="">
+            <img class="logo" src="images/first_aid_navbar-logo.png" alt="" />
+          </a>
+          <div class="d-inline-flex ml-auto">
+            <div class="headCont bi bi-telephone-fill">
+              Contact us free:<br /><a href="">+43 1 645 645</a>
+            </div>
+            <div class="headCont bi bi-envelope-at-fill">
+              Write to us e-mail: <br /><a href="">firstaidcourses@mail.com</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <nav class="navbar navbar-expand-lg navbar-light navbar-top">
+        <div class="container">
+          <div class="nav-wrapper">
+            <a href="" class="navbar-brand">
+              <img src="images/first_aid_navbar-logo.png" alt="" />
+            </a>
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-toggle="collapse"
+              data-target="#navbarToggler"
+            >
+              <span class="navbar-togler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarToggler">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a href="" class="nav-link">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a href="" class="nav-link">Courses</a>
+                </li>
+                <li class="nav-item">
+                  <a href="" class="nav-link">Registration course</a>
+                </li>
+                <li class="nav-item">
+                  <a href="" class="nav-link">Reservations</a>
+                </li>
+                <li class="nav-item">
+                  <a href="" class="nav-link">Students</a>
+                </li>
+              </ul>
+              <div class="my-btn ms-auto">
+                <a href="" class="nav-link">Check</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </section>
+    <div id="banner"></div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
+  </body>
+</html>
