--- a/index.html
+++ b/index.html
@@ -67,7 +67,10 @@
                 </li>
               </ul>
               <div class="my-btn ms-auto">
-                <a href="" class="nav-link">Check</a>
+                <a href="" class="nav-link">Login</a>
+              </div>
+              <div class="my-btn ms-left">
+                <a href="" class="nav-link">Register</a>
               </div>
             </div>
           </div>
@@ -75,6 +78,7 @@
       </nav>
     </section>
     <div id="banner"></div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
