--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
     <link rel="stylesheet" href="style/style.css" />
     <title>First Aid Courses</title>
   </head>
+
   <body>
     <section id="header">
+      <!-- Header start -->
       <div class="header-top">
         <div class="container d-flex justify-content-between">
           <a href="">
@@ -26,55 +28,151 @@
           </a>
           <div class="d-inline-flex ml-auto">
             <div class="headCont bi bi-telephone-fill">
-              Contact us free:<br /><a href="">+43 1 645 645</a>
+              Call us for free:<br /><a href="tel:+43 1 645 645"
+                >+43 1 645 645</a
+              >
             </div>
             <div class="headCont bi bi-envelope-at-fill">
-              Write to us e-mail: <br /><a href="">firstaidcourses@mail.com</a>
+              Send us an e-mail: <br /><a href="mailto:firstaidcourses@mail.com"
+                >firstaidcourses@mail.com</a
+              >
             </div>
           </div>
         </div>
       </div>
+      <!-- Header end -->
+
+      <!-- Navbar start -->
       <nav class="navbar navbar-expand-lg navbar-light navbar-top">
-        <div class="container">
-          <div class="nav-wrapper">
-            <a href="" class="navbar-brand">
-              <img src="images/first_aid_navbar-logo.png" alt="" />
-            </a>
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-toggle="collapse"
-              data-target="#navbarToggler"
-            >
-              <span class="navbar-togler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarToggler">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a href="" class="nav-link">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a href="" class="nav-link">Courses</a>
-                </li>
-                <li class="nav-item">
-                  <a href="" class="nav-link">Registration course</a>
-                </li>
-                <li class="nav-item">
-                  <a href="" class="nav-link">Reservations</a>
-                </li>
-                <li class="nav-item">
-                  <a href="" class="nav-link">Students</a>
-                </li>
-              </ul>
-              <div class="my-btn ms-auto">
-                <a href="" class="nav-link">Check</a>
-              </div>
+        <div class="container nav-wrapper p-0">
+          <a href="" class="nav-link" id="collapsed-home-link">Home</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarToggler"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarToggler">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a href="" class="nav-link" id="expanded-home-link">Home</a>
+              </li>
+              <li class="nav-item">
+                <a href="" class="nav-link">Courses</a>
+              </li>
+              <li class="nav-item">
+                <a href="" class="nav-link">Registration course</a>
+              </li>
+              <li class="nav-item">
+                <a href="" class="nav-link">Reservations</a>
+              </li>
+              <li class="nav-item">
+                <a href="" class="nav-link">Students</a>
+              </li>
+            </ul>
+            <div class="my-btn ms-auto">
+              <a href="" class="nav-link">Check</a>
             </div>
           </div>
         </div>
       </nav>
+      <!-- Navbar end -->
     </section>
     <div id="banner"></div>
+
+    <!-- Review section start -->
+    <div id="myCarousel" class="carousel slide w-50 mx-auto my-5">
+      <div class="carousel-inner">
+        <!-- First item -->
+        <div class="carousel-item active text-center">
+          <img
+            src="./images/review-test.jpg"
+            class="img-fluid img-thumbnail rounded-circle review-img"
+            alt="test"
+          />
+          <div class="container">
+            <div class="carousel-caption">
+              <p>
+                Here comes the review text. Lorem ipsum dolor sit, amet
+                consectetur adipisicing elit. Quos, blanditiis! Lorem ipsum
+                dolor sit, amet consectetur adipisicing elit. Eius, nobis.
+              </p>
+            </div>
+            <div class="mt-1">
+              <span class="fw-bold">Person</span> |
+              <span class="fw-bold">Organization</span> - <span>Course</span> |
+              <span>Date</span>
+            </div>
+          </div>
+        </div>
+        <!-- Second item -->
+        <div class="carousel-item text-center">
+          <img
+            src="./images/review-test.jpg"
+            class="img-fluid img-thumbnail rounded-circle review-img"
+            alt="test"
+          />
+          <div class="container">
+            <div class="carousel-caption">
+              <p>
+                Here comes the review text. Lorem ipsum dolor sit, amet
+                consectetur adipisicing elit. Quos, blanditiis! Lorem ipsum
+                dolor sit, amet consectetur adipisicing elit. Eius, nobis.
+              </p>
+            </div>
+            <div class="mt-1">
+              <span class="fw-bold">Person</span> |
+              <span class="fw-bold">Organization</span> - <span>Course</span> |
+              <span>Date</span>
+            </div>
+          </div>
+        </div>
+        <!-- Third item -->
+        <div class="carousel-item text-center">
+          <img
+            src="./images/review-test.jpg"
+            class="img-fluid img-thumbnail rounded-circle review-img"
+            alt="test"
+          />
+          <div class="container">
+            <div class="carousel-caption">
+              <p>
+                Here comes the review text. Lorem ipsum dolor sit, amet
+                consectetur adipisicing elit. Quos, blanditiis! Lorem ipsum
+                dolor sit, amet consectetur adipisicing elit. Eius, nobis.
+              </p>
+            </div>
+          </div>
+          <div class="mt-1">
+            <span class="fw-bold">Person</span> |
+            <span class="fw-bold">Organization</span> - <span>Course</span> |
+            <span>Date</span>
+          </div>
+        </div>
+      </div>
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#myCarousel"
+        data-bs-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-bs-target="#myCarousel"
+        data-bs-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+    <!-- Review section end -->
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
