--- a/index.html
+++ b/index.html
@@ -78,7 +78,38 @@
       </nav>
     </section>
     <div id="banner"></div>
-
+    <div class="wrapper">
+      <div class="card">
+        <div class="img-wrapper"><img src="images/profile1.jpg" /></div>
+        <div class="details">
+          <h3>Rose Warner</h3>
+          <h5>Training Manager</h5>
+          <div class="social-icons">
+            <button type="button" class="btn btn-secondary">About me</button>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="img-wrapper"><img src="images/profile2.jpg" /></div>
+        <div class="details">
+          <h3>Emily Smith</h3>
+          <h5>Lead Trainer</h5>
+          <div class=".about-me">
+            <button type="button" class="btn btn-secondary">About me</button>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="img-wrapper"><img src="images/profile3.jpg" /></div>
+        <div class="details">
+          <h3>Emily Mitchell</h3>
+          <h5>Trainer</h5>
+          <div class="social-icons">
+            <button type="button" class="btn btn-secondary">About me</button>
+          </div>
+        </div>
+      </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
