added comments and organized css a bit

--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
             </ul>
             <div class="my-btn ms-auto">
               <a href="" class="nav-link">Login</a>
-              </div>
-              <div class="my-btn ms-left">
-                <a href="" class="nav-link">Register</a>
+            </div>
+            <div class="my-btn ms-left">
+              <a href="" class="nav-link">Register</a>
             </div>
           </div>
         </div>
@@ -84,7 +84,8 @@
       <!-- Navbar end -->
     </section>
     <div id="banner"></div>
-<<<<<<< HEAD
+
+    <!-- Trainer Cards start -->
     <div class="wrapper">
       <div class="card">
         <div class="img-wrapper"><img src="images/profile1.jpg" /></div>
@@ -117,7 +118,7 @@
         </div>
       </div>
     </div>
-=======
+    <!-- Trainer Cards end -->
 
     <!-- Review section start -->
     <div id="myCarousel" class="carousel slide w-50 mx-auto my-5">
@@ -210,7 +211,6 @@
     </div>
     <!-- Review section end -->
 
->>>>>>> 46b42931009fee3bdf0259791721524333ad1d58
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
