--- a/index.html
+++ b/index.html
@@ -210,6 +210,59 @@
       </button>
     </div>
     <!-- Review section end -->
+    
+    <!-- Students section start -->
+    <article class="flow">
+      <h1>Our Students</h1>
+      <p>Here comes the review text. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, blanditiis! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius, nobis.</p>
+      <div class="team">
+        <ul class="auto-grid" role="list">
+          <li>
+            <a href="https://www.instagram.com/" target=_blank" class="profile">
+              <h2 class="profile__name">Anita Simmons</h2>
+              <p>Wien 34 year</p>
+              <img alt="Anita Simmons" src="https://source.unsplash.com/BhcutpohYwg/800x800" />
+            </a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/" target=_blank" class="profile">
+              <h2 class="profile__name">Celina Harris</h2>
+              <p>Linz 35 year</p>
+              <img alt="Profile shot for Celina Harris" src="https://source.unsplash.com/j5KAuRrYX7g/800x800" />
+            </a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/" target=_blank" class="profile">
+              <h2 class="profile__name">Ruby Morris</h2>
+              <p>Graz 33 year</p>
+              <img alt="Profile shot for Ruby Morris" src="https://source.unsplash.com/pQyIutdScOY/800x800" />
+            </a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/" target=_blank" class="profile">
+              <h2 class="profile__name">Nicholas Castro</h2>
+              <p>Wien 30 yea</p>
+              <img alt="Profile shot for Nicholas Castro" src="https://source.unsplash.com/55JRsxcAiWE/800x800" />
+            </a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/" target=_blank" class="profile">
+              <h2 class="profile__name">Marc Dixon</h2>
+              <p>Tirol 29 year</p>
+              <img alt="Profile shot for Marc Dixon" src="https://source.unsplash.com/5wn6DeAEcmE/800x800" />
+            </a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/" target=_blank" class="profile">
+              <h2 class="profile__name">Chad Chadson</h2>
+              <p>Linz 31 year</p>
+              <img alt="Profile shot for Chad" src="https://source.unsplash.com/7jCYw6a2Wao/800x800" />
+            </a>
+          </li>
+        </ul>
+      </div>
+    </article>
+    <!-- Students section end -->
     <div class="footer">
       <div class="container">
         <div class="row">
