organized and adjusted

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               </li>
             </ul>
             <div class="my-btn ms-auto">
-              <a href="" class="nav-link">Login</a>
+              <a href="actions/login/login.php" class="nav-link">Login</a>
             </div>
             <div class="my-btn ms-left">
               <a href="" class="nav-link">Register</a>
