quatotion marks fixed - added missing ones in students - removed extra ones in footer

--- a/index.html
+++ b/index.html
@@ -210,59 +210,106 @@
       </button>
     </div>
     <!-- Review section end -->
-    
+
     <!-- Students section start -->
     <article class="flow">
       <h1>Our Students</h1>
-      <p>Here comes the review text. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, blanditiis! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius, nobis.</p>
+      <p>
+        Here comes the review text. Lorem ipsum dolor sit, amet consectetur
+        adipisicing elit. Quos, blanditiis! Lorem ipsum dolor sit, amet
+        consectetur adipisicing elit. Eius, nobis.
+      </p>
       <div class="team">
         <ul class="auto-grid" role="list">
           <li>
-            <a href="https://www.instagram.com/" target=_blank" class="profile">
+            <a
+              href="https://www.instagram.com/"
+              target="_blank"
+              class="profile"
+            >
               <h2 class="profile__name">Anita Simmons</h2>
               <p>Wien 34 year</p>
-              <img alt="Anita Simmons" src="https://source.unsplash.com/BhcutpohYwg/800x800" />
+              <img
+                alt="Anita Simmons"
+                src="https://source.unsplash.com/BhcutpohYwg/800x800"
+              />
             </a>
           </li>
           <li>
-            <a href="https://www.instagram.com/" target=_blank" class="profile">
+            <a
+              href="https://www.instagram.com/"
+              target="_blank"
+              class="profile"
+            >
               <h2 class="profile__name">Celina Harris</h2>
               <p>Linz 35 year</p>
-              <img alt="Profile shot for Celina Harris" src="https://source.unsplash.com/j5KAuRrYX7g/800x800" />
+              <img
+                alt="Profile shot for Celina Harris"
+                src="https://source.unsplash.com/j5KAuRrYX7g/800x800"
+              />
             </a>
           </li>
           <li>
-            <a href="https://www.instagram.com/" target=_blank" class="profile">
+            <a
+              href="https://www.instagram.com/"
+              target="_blank"
+              class="profile"
+            >
               <h2 class="profile__name">Ruby Morris</h2>
               <p>Graz 33 year</p>
-              <img alt="Profile shot for Ruby Morris" src="https://source.unsplash.com/pQyIutdScOY/800x800" />
+              <img
+                alt="Profile shot for Ruby Morris"
+                src="https://source.unsplash.com/pQyIutdScOY/800x800"
+              />
             </a>
           </li>
           <li>
-            <a href="https://www.instagram.com/" target=_blank" class="profile">
+            <a
+              href="https://www.instagram.com/"
+              target="_blank"
+              class="profile"
+            >
               <h2 class="profile__name">Nicholas Castro</h2>
               <p>Wien 30 yea</p>
-              <img alt="Profile shot for Nicholas Castro" src="https://source.unsplash.com/55JRsxcAiWE/800x800" />
+              <img
+                alt="Profile shot for Nicholas Castro"
+                src="https://source.unsplash.com/55JRsxcAiWE/800x800"
+              />
             </a>
           </li>
           <li>
-            <a href="https://www.instagram.com/" target=_blank" class="profile">
+            <a
+              href="https://www.instagram.com/"
+              target="_blank"
+              class="profile"
+            >
               <h2 class="profile__name">Marc Dixon</h2>
               <p>Tirol 29 year</p>
-              <img alt="Profile shot for Marc Dixon" src="https://source.unsplash.com/5wn6DeAEcmE/800x800" />
+              <img
+                alt="Profile shot for Marc Dixon"
+                src="https://source.unsplash.com/5wn6DeAEcmE/800x800"
+              />
             </a>
           </li>
           <li>
-            <a href="https://www.instagram.com/" target=_blank" class="profile">
+            <a
+              href="https://www.instagram.com/"
+              target="_blank"
+              class="profile"
+            >
               <h2 class="profile__name">Chad Chadson</h2>
               <p>Linz 31 year</p>
-              <img alt="Profile shot for Chad" src="https://source.unsplash.com/7jCYw6a2Wao/800x800" />
+              <img
+                alt="Profile shot for Chad"
+                src="https://source.unsplash.com/7jCYw6a2Wao/800x800"
+              />
             </a>
           </li>
         </ul>
       </div>
     </article>
     <!-- Students section end -->
+
     <div class="footer">
       <div class="container">
         <div class="row">
@@ -299,11 +346,30 @@
                 <li></li>
 
                 <li>
-                  <i class="bi bi-envelope" style="padding-right: 10px; color: #f5cb5c"> </i>  firstaidcourses@mail.com
+                  <i
+                    class="bi bi-envelope"
+                    style="padding-right: 10px; color: #f5cb5c"
+                  >
+                  </i>
+                  firstaidcourses@mail.com
                 </li>
-                <li><i class="bi bi-telephone-fill"style="padding-right: 10px; color: #f5cb5c"> </i> +43 1 645 645</li>
+                <li>
+                  <i
+                    class="bi bi-telephone-fill"
+                    style="padding-right: 10px; color: #f5cb5c"
+                  >
+                  </i>
+                  +43 1 645 645
+                </li>
 
-                <li><i class="bi bi-geo-alt-fill"style="padding-right: 10px; color: #f5cb5c"> </i> Vienna, AT</li>
+                <li>
+                  <i
+                    class="bi bi-geo-alt-fill"
+                    style="padding-right: 10px; color: #f5cb5c"
+                  >
+                  </i>
+                  Vienna, AT
+                </li>
               </ul>
             </div>
           </div>
@@ -315,21 +381,28 @@
             <div class="line"></div>
             <div class="second2">
               <a href="https://intagram.com" target="_blank">
-                <i class="bi bi-instagram" style="font-size: 40px; color: #333533""></i
+                <i
+                  class="bi bi-instagram"
+                  style="font-size: 40px; color: #333533"
+                ></i
               ></a>
               <a href="https://youtube.com/" target="_blank">
-                <i class="bi bi-youtube" style="font-size: 40px; color: #333533""></i
+                <i
+                  class="bi bi-youtube"
+                  style="font-size: 40px; color: #333533"
+                ></i
               ></a>
-              <a
-                href="https://www.linkedin.com"
-                target="_blank"
-              >
-                <i class="bi bi-linkedin" style="font-size: 40px; color: #333533"></i
+              <a href="https://www.linkedin.com" target="_blank">
+                <i
+                  class="bi bi-linkedin"
+                  style="font-size: 40px; color: #333533"
+                ></i
               ></a>
-              <a
-                href="https://www.facebook.com"
-                target="_blank"
-                ><i class="bi bi-facebook" style="font-size: 40px; color: #333533"></i
+              <a href="https://www.facebook.com" target="_blank"
+                ><i
+                  class="bi bi-facebook"
+                  style="font-size: 40px; color: #333533"
+                ></i
               ></a>
             </div>
           </div>
