--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               <a href="actions/login/login.php" class="nav-link">Login</a>
             </div>
             <div class="my-btn ms-left">
-              <a href="" class="nav-link">Register</a>
+              <a href="actions/login/register.php" class="nav-link">Register</a>
             </div>
           </div>
         </div>
